--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+        </style>
+    <link rel="stylesheet" href="style.css">            
 </head>
 <body>
-    <h1> Hello World </h1>
+   <div class="navbar">
+    <div class="name">
+        <div class="logo-icon">
+            <img src="/Images/logo1-removebg-preview.png" alt="Logo">
+        </div>
+        <div class="logo-name">
+            Samar
+        </div>
+    </div>
+    <div class="nav-list">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">Education</a></li>
+            <li><a href="#">Education</a></li>
+            <li><a href="#">Experience</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </div>
+   </div>
+
+
+
+    <script src="app.js"></script>
 </body>
 </html>
