Home Page Created

--- a/index.html
+++ b/index.html
@@ -32,6 +32,34 @@
     </div>
    </div>
 
+   <div id="home">    
+    <div class="details">
+        <div class="line1 intro">
+            Hi There
+        </div>
+        <div class="line2 ">
+            <div class="intro">
+                I'm Samar 
+            </div> 
+            <div class="surname">Soni</div>
+        </div>
+        <div class="line3">
+            <div class="add">
+                I am into 
+            </div>
+            <div class="skill">Frontend Development</div>
+        </div>
+        <div class="aboutMe">
+            <button><a href="#">About Me</a></button>
+        </div>
+ 
+    </div>
+    <div class="image">
+        <img src="/Images/Samar Pic.jpg" alt sty="Profile Image">
+    </div>
+ 
+ </div>
+
 
 
     <script src="app.js"></script>
