About Page Added

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="line3">
             <div class="add">
-                I am into 
+                I am into  
             </div>
             <div class="skill">Frontend Development</div>
         </div>
@@ -57,7 +57,38 @@
     <div class="image">
         <img src="/Images/Samar Pic.jpg" alt sty="Profile Image">
     </div>
- 
+ </div>
+
+ <div id="About">
+    <header>
+    <div class="icon">
+        <img src="/Images/About_Image-removebg-preview (1).png" alt="Icon">
+    </div>
+    <div class="about">
+        About
+        <span>Me</span>
+    </div>
+</header>
+    <div class="details">
+        <div class="image">
+            <img src="/Images/Samar 2 pic.jpg" alt="Samar Pic">
+        </div>
+        <div class="description">
+            <h1>I am Samar</h1>
+            <p class="skills">Frontend Developer</p>
+            <p class="aboutMe">I am a Frontend developer based in Ballia-UP, India. 
+                I am an Electrical Engineering undergraduate from Dr BR Ambedkar National Institute of Techonology Jalandhar(NITJ).
+                I am very passionate about improving my coding skills &amp; developing applications &amp; websites.
+                I build WebApps and Websites using HTML,CSS &amp; Javascript.
+                Working for myself to improve my skills.
+                 </p>
+                 <div class="email"><span>Email : </span> samarsonijee@gmail.com</div>
+                 <div class="email"><span>Place : </span> Ballia-UP, 277207</div>
+                 <div class="resume">
+                    <button><a href="#">Resume</a> </button>
+                 </div>
+        </div>
+    </div>
  </div>
 
 
