--- a/index.html
+++ b/index.html
@@ -91,6 +91,94 @@
     </div>
  </div>
 
+ <div id="Skill">
+    <div class="header">
+        <div class="icon">
+            <img src="/Images/computer_icon__1_-removebg-preview.png" alt="icon">
+        </div>
+        <div class="text">
+            Skills &amp; <span>Abilities</span>
+        </div>
+    </div>
+    <div class="grid">
+        <div class="bar">
+            <div class="image">
+            <img src="/Skills-Image/c-plus-plus-logo.png" alt="C++ Image"></div>
+            <info>C++</info>
+        </div>
+        <div class="bar">
+            <div class="image">
+            <img src="/Skills-Image/html-5--v1.png" alt="HTML Image"></div>
+            <info>HTML5</info>
+        </div>
+        <div class="bar">
+            <div class="image">
+            <img src="/Skills-Image/css3.png" alt="CSS Image"></div>
+            <info>css3</info>
+        </div>
+        <div class="bar">
+            <div class="image">
+            <img src="https://img.icons8.com/color/48/000000/javascript--v1.png" alt="C++ Image"></div>
+            <info>Javascript</info>
+        </div>
+        <div class="bar">
+            <div class="image">
+            <img src="https://img.icons8.com/ios-filled/48/1169ae/jquery.png" alt="C++ Image"></div>
+            <info>Jquery</info>
+        </div>
+        <div class="bar">
+            <div class="image">
+            <img src="https://img.icons8.com/color/48/000000/git.png" alt="C++ Image"></div>
+            <info>Git VCS</info>
+        </div>
+        <div class="bar">
+            <div class="image">
+            <img src="https://img.icons8.com/glyph-neue/48/ffffff/github.png" alt="C++ Image"></div>
+            <info>GitHub</info>
+        </div>
+        <div class="bar">
+            <div class="image">
+            <img src="https://img.icons8.com/external-tal-revivo-color-tal-revivo/48/000000/external-react-a-javascript-library-for-building-user-interfaces-logo-color-tal-revivo.png" alt="C++ Image"></div>
+            <info>React</info>
+        </div>
+        <div class="bar">
+            <div class="image">
+            <img src="https://img.icons8.com/fluency/48/000000/node-js.png" alt="C++ Image"></div>
+            <info>NodeJs</info>
+        </div>
+        <div class="bar">
+            <div class="image">
+            <img src="https://img.icons8.com/color/48/000000/bootstrap.png" alt="C++ Image"></div>
+            <info>Bootstrap </info>
+        </div>
+        <div class="bar">
+            <div class="image">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Tailwind_CSS_Logo.svg/48px-Tailwind_CSS_Logo.png" alt="C++ Image"></div>
+            <info>Tailwind</info>
+        </div>
+        <div class="bar">
+            <div class="image">
+            <img src="https://img.icons8.com/color/48/000000/mysql-logo.png" alt="C++ Image"></div>
+            <info>MySQL</info>
+        </div>
+        <div class="bar">
+            <div class="image">
+            <img src="https://img.icons8.com/external-tal-revivo-shadow-tal-revivo/48/000000/external-netlify-a-cloud-computing-company-that-offers-hosting-and-serverless-backend-services-for-static-websites-logo-shadow-tal-revivo.png" alt="C++ Image"></div>
+            <info>Netlify</info>
+        </div>
+        <div class="bar">
+            <div class="image">
+            <img src="https://img.icons8.com/color/48/000000/mongodb.png" alt="C++ Image"></div>
+            <info>MongoDB</info>
+        </div>
+        <div class="bar">
+            <div class="image">
+            <img src="https://img.icons8.com/color/48/000000/postgreesql.png" alt="C++ Image"></div>
+            <info>PostgreeSQL</info>
+        </div>
+    </div>
+ </div>
+
 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="app.js"></script>
