Education Section Added

--- a/index.html
+++ b/index.html
@@ -179,6 +179,69 @@
     </div>
  </div>
 
+ <div id="Education">
+    <div class="header">
+        <div class="icon">
+            <img src="/Images/Graduation_Image-removebg-preview.png" alt="Graduation Image">
+        </div>
+        <div class="title">
+            My
+            <span>Education</span>
+        </div>
+    </div>
+    <div class="description">
+        Education Is Not The Learning Of Facts, But The Training Of The Mind To Think
+    </div>
+    <div class="institute">
+        <div class="image">
+            <img src="/Images/nit.jpeg" alt="NITJ ">
+        </div>
+        <div class="content">
+            <p class="Degree">
+                Bachelor of Technology in Electrical Engineering
+            </p>
+            <p class="collegeName">
+                B R Ambedkar National Institute of Technology, Jalandhar | NITJ
+            </p>
+            <p class="year">
+                2022-2026 | pursuing
+            </p>
+        </div>
+    </div>
+    <div class="institute">
+        <div class="image">
+            <img src="/Images/CPS.png" alt="CPS School ">
+        </div>
+        <div class="content">
+            <p class="Degree">
+                Intermediate (Class 11 &amp; Class 12)
+            </p>
+            <p class="collegeName">
+                Central Public School Azamgarh | CPS
+            </p>
+            <p class="year">
+                2019-2021 | Completed
+            </p>
+        </div>
+    </div>
+    <div class="institute">
+        <div class="image">
+            <img src="/Images/Amrit School.jpg" alt="CPS School ">
+        </div>
+        <div class="content">
+            <p class="Degree">
+                HighSchool (Class 09 &amp; Class 10)
+            </p>
+            <p class="collegeName">
+                Amrit Memorial Sr Sec School 
+            </p>
+            <p class="year">
+                2017-2019 | Completed
+            </p>
+        </div>
+    </div>
+ </div>
+
 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="app.js"></script>
