created project section

--- a/index.html
+++ b/index.html
@@ -242,6 +242,28 @@
     </div>
  </div>
 
+ <div id="Projects">
+    <header>
+        <div class="icon">
+            <img src="/Images/computer_icon__1_-removebg-preview.png" alt="Computer icon">
+        </div>
+        <div class="title">
+            Projects
+            <span>Made</span>
+        </div>
+    </header>
+<div class="projects">
+    <div class="cards">
+        <div class="image">
+            Updated Soon
+        </div>
+        <div class="info">
+            Soon Updated
+        </div>
+    </div>
+</div>
+ </div>
+
 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="app.js"></script>
