--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="skill">Frontend Development</div>
         </div>
         <div class="aboutMe">
-            <button><a href="#">About Me</a></button>
+            <button><a href="#About">About Me</a></button>
         </div>
  
     </div>
