--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
         <span>Contact Info</span>
         <p class="connect">+91 XXX-XXX-XXXX</p>
         <p class="connect">samarsonijee@gmail.com</p>
-        <p class="connect">Ballia UttarPradesh</p>
+        <p class="connect">Ballia, UttarPradesh</p>
     </div>
  </div>
  <hr>
